[package]
name = "stabilized_vehicle"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[features]
default = ["use_madgwick_filter","use_rpm_filters"]
#default = ["use_mahony_filter"]
#default = ["use_complementary_filter"]
use_madgwick_filter = []
use_complementary_filter = []
use_mahony_filter = []
use_rpm_filters = []

[dependencies]
num-traits = "0.2.19"
cfg-if = "1.0"

vector-quaternion-matrix = { git = "https://github.com/martinbudden/crate-vector-quaternion-matrix" }
imu-sensors = { git = "https://github.com/martinbudden/crate-imu-sensors" }
sensor-fusion = { git = "https://github.com/martinbudden/crate-sensor-fusion" }
filters = { git = "https://github.com/martinbudden/crate-filters" }
pid-controller = { git = "https://github.com/martinbudden/crate-pid-controller" }
motor-mixers = { git = "https://github.com/martinbudden/crate-motor-mixers" }

# For easy flash access on the RP2040
embedded-storage = "0.3"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.0", features = ["embedded-io"] }

[dev-dependencies]
# assert_float_eq = "1.2.0" # used for test

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = true
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
